--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -7,7 +7,7 @@
   --color-base-darker: rgb(20, 20, 20);
 
   --color-accent: rgb(151, 215, 0);
-  --color-accent-075: rgba(151, 215, 0, 0.75);
+  --color-accent-o75: rgba(151, 215, 0, 0.75);
   --color-warn: rgb(216, 14, 18);
   --color-warn-light: hsl(359, 75%, 60%);
 
@@ -37,6 +37,7 @@ body {
 
 a {
   color: var(--color-accent);
+  text-decoration: none;
   cursor: pointer;
 }
 
