--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import './styles/resets.css';
 @import './styles/theme.css';
+@import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,400;0,900;1,400&display=swap');
 
 body {
   margin: 0;
