add back/reset buttons, v0.1.2

--- a/src/components/FontPreview.css
+++ b/src/components/FontPreview.css
@@ -1,5 +1,6 @@
 .pre-container {
   background-color: var(--color-base-dark);
+  border: 1px solid var(--color-highlight);
   border-radius: 6px;
   padding: 1.5rem 3rem;
 }
