--- a/src/components/DecisionCard.css
+++ b/src/components/DecisionCard.css
@@ -41,8 +41,18 @@
   max-width: calc(100% - 4rem);
   
   background: var(--color-base-dark);
+  border: 1px solid var(--color-highlight);
   border-radius: 6px;
   overflow: hidden;
+}
+
+.dcard-top {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  gap: 1rem;
+  padding: 0.5rem 1.5rem;
+  border-bottom: 1px solid var(--color-base-darker);
 }
 
 .dcard-content {
@@ -50,7 +60,7 @@
   display: grid;
   place-items: center;
 
-  border-bottom: 2px solid var(--color-base-lighter)
+  border-bottom: 1px solid var(--color-base-darker);
 }
 
 .dcard-content > div {
