--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@
 
 .font-upload {
   background-color: var(--color-base-dark);
+  border: 1px solid var(--color-highlight);
   border-radius: 6px;
 
   display: grid;
