--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,8 @@
 }
 
 .font-upload {
-  background-color: var(--color-base-dark);
-  border: 1px solid var(--color-highlight);
+  background-color: var(--color-base);
+  border: 1px solid var(--color-base-darker);
   border-radius: 6px;
 
   display: grid;
