alternate navigation for mobile devices

--- a/src/components/DecisionCard.css
+++ b/src/components/DecisionCard.css
@@ -50,9 +50,17 @@
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  gap: 1rem;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem;
   border-bottom: 1px solid var(--color-base-darker);
+}
+
+.dcard-top-space {
+  flex-grow: 1;
+}
+
+.dcard-btn-next {
+  border-color: var(--color-accent);
+  color: var(--color-accent);
 }
 
 .dcard-content {
@@ -98,7 +106,7 @@
 }
 
 .dcard-buttons .clicked {
-  animation: clicked 200ms ease 50ms 1 normal both;
+  animation: clicked 300ms ease 50ms 1 normal both;
 }
 
 .dcard-end {
@@ -127,15 +135,17 @@
 @keyframes clicked {
   0% {
     border-color: transparent;
-    transform: scale(1);
   }
 
-  50% {
+  34% {
     border-color: var(--color-accent);
   }
 
-  100% {
+  67% {
     border-color: transparent;
-    transform: scale(1);
+  }
+
+  100% {
+    border-color: var(--color-accent);
   }
 }
